# ui-ws-automation

./: CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  main.yml
cmake/: ObsPluginHelpers.cmake
data/locale/: en-US.ini
packaging/debian/: changelog  control  copyright  rules
packaging/fedora/: obs-studio-plugin-simple-template.spec  obs-studio-plugin-ui-ws-automation.spec
python-lib/: README.md  setup.py
python-lib/src/: tool.py
python-lib/src/obsws_ui/: __init__.py  client.py  common.py  tool.py
src/: entrypoints.h  functions-object.cc  functions.hh  menu.cc  plugin-macros.h.in  plugin-main.c  widget-grab.cc  widget-invoke.cc  widget.cc
